# RPA-Browser

./: .dockerignore  .gitignore  Dockerfile  WEBRTC_AUTO_UPGRADE.md  WEBRTC_DEBUG_GUIDE.md  WEBRTC_REFACTORING_COMPLETE.md  alembic.ini  main.py  pyproject.toml  webrtc_debug.html
.codebuddy/rules/: import规则.mdc  int类型前后端传参.mdc  python-venv-activation.mdc  python语法.mdc  refactoring-guidelines.mdc  typehint.mdc  业务code.mdc  前端需求.mdc  数据库模型存放位置.mdc  用户mid获取.mdc  类型注释.mdc
alembic/: env.py
alembic/versions/: 21f94edb9f0b_initial_baseline_create_all_tables.py  a75c00e3ba6f_auto_generated_migration_development_.py
app/: config.py  routes.py  scheduler_manager.py  setup.py
app/controller/v1/: __init__.py
app/data/: permissions.json.template
app/exceptions/: handlers.py
app/models/: __init__.py  response.py  response_code.py  response_msg.py
app/models/RPA_browser/: admin_models.py  enums.py  (+19 more)
app/utils/: alembic_migration.py  bigint_utils.py  jwt_utils.py  plugin_utils.py  snow_flake_gen.py
botright/: botright.py
botright/modules/: faker.py  hcaptcha.py  proxy_manager.py
botright/playwright_mock/: browser.py  frame.py  frame_locator.py  page.py
docs/: CUSTOM_ACTION_ARCHITECTURE.md  FRONTEND_CUSTOM_ACTION_GUIDE.md  FRONTEND_EDITOR_DESIGN_GUIDE.md  FRONTEND_PAGINATION_MIGRATION_GUIDE.md  background_tasks_simplification.md  live_service_cleanup_refactor_summary.md  live_service_cleanup_state_machine.md  live_service_cleanup_verification.md
docs/frontend_requirements/: 前端需求.mdc
scripts/: alembic_manage.sh  migrate_add_name_uniqueness.py
scripts/initd/: download_browser_forge.py  init_database.py  install_ungoogled_chromium.py  main.py  scripts.py  verify_tables.py
static/: README.md  test.html
tests/: run_test_browser.ipynb  run_test_browser.py  test_browser_creation_lock.py  test_cleanup_logic_simple.py  test_close_browser_session.py  test_live_service_cleanup.py  test_page_limit.py  test_page_management.py  test_plugined_browser.py  test_response_code.py  test_scheduler.py  test_webrtc_basic.py  test_webrtc_refactored.py
tests/.ipynb_checkpoints/: run_test_browser-checkpoint.ipynb
tests/test_fingerprint/: main.py
tests/test_rpa_browser/: main.py  test_pool.py
(+165 files in other folders)
